# hsfz-toolkit

./: .gitignore  ANDROID.md  CONTRIBUTING.md  DISCLAIMER.md  NOTICE  README.md  SCOPE.md  SECURITY.md  TRADEMARKS.md  build-android.sh  build-windows.ps1  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: README.md  build.md  hsfz-protocol.md  mevd17.md  proxy.md  simulator.md  workflows.md
scripts/: collect-release.mjs  generate-android-icons.py
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/android-overrides/: README.md
src-tauri/android-overrides/app/src/main/: AndroidManifest.xml
src-tauri/android-overrides/app/src/main/res/drawable/: splash.xml
src-tauri/android-overrides/app/src/main/res/values/: colors.xml  themes.xml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: sample_ncd_coding_backup.json
src-tauri/src/: app_paths.rs  commands.rs  error.rs  lib.rs  main.rs  op_log.rs  security.rs  types.rs
src-tauri/src/binary/: assembler.rs
src-tauri/src/calibration_read/: client.rs  discovery.rs  mod.rs
src-tauri/src/capture/: engine.rs  interfaces.rs  mod.rs  parser.rs  state.rs
src-tauri/src/hsfz/: parser.rs
src-tauri/src/pcap/: mod.rs  reader.rs  tcp_reassembly.rs  writer.rs
src-tauri/src/proxy/: mod.rs
src-tauri/src/simulator/: capture.rs  clone.rs  discovery_responder.rs  encoder.rs  hsfz.rs  mod.rs  profile.rs  server.rs  services.rs  state.rs  synthesize.rs
src-tauri/src/uds/: parser.rs  session.rs
src/lib/: back-button.ts  haptics.ts  mobile-utils.ts  persistent-state.ts  types.ts
src/lib/actions/: portal.ts
src/lib/components/: CalibrationReadPanel.svelte  DropZone.svelte  EventLog.svelte  LoadPanel.svelte  ProxyPanel.svelte  SessionTable.svelte  SimulatorPanel.svelte  Spinner.svelte  TabBar.svelte  ToastStrip.svelte
src/lib/components/capture/: CaptureControls.svelte  CapturePanel.svelte  InterfaceSelector.svelte  LiveStats.svelte
src/lib/components/mobile/: BottomNav.svelte  MobileShell.svelte
